--- a/week-1-html-css/website.html
+++ b/week-1-html-css/website.html
@@ -1,3 +1,9 @@
-<button>Hello</button>
-<p>paragraph of text</p>
-<a href="http://www.youtube.com" target="_blank">Link to Youtube</a>
+<button>
+  Hello
+</button>
+<p>
+  paragraph of text
+</p>
+<a href="http://www.youtube.com" target="_blank">
+  Link to Youtube
+</a>
