--- a/week-1-html-css/buttons.html
+++ b/week-1-html-css/buttons.html
@@ -8,6 +8,13 @@
         border-radius: 2px;
         cursor: pointer;
         margin-right: 8px;
+        transition: opacity 0.15s;
+    }
+    .sub-button:hover {
+        opacity: 0.75;
+    }
+    .sub-button:active {
+        opacity: 0.6;
     }
 
     .join-button {
@@ -20,18 +27,31 @@
         width: 62px;
         border-radius: 2px;
         cursor: pointer;
+        transition: background-color 1s, color 1s;
+    }
+    .join-button:hover {
+        background-color: rgb(41,118,211);
+        color: white;
+    }
+    .join-button:active {
+        opacity: 0.7;
     }
 
     .tweet-button {
         background: rgb(2,158,255);
         color: white;
         border: none;
+        height: 36px;
         width: 74px;
         border-radius: 18px;
         font-weight: bold;
         font-size: 15px;
         cursor: pointer;
         margin-left: 8px;
+        transition: box-shadow 0.15s;
+    }
+    .tweet-button:hover {
+        box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
     }
 </style>
 <button class="sub-button">SUBSCRIBE</button>
