--- a/week-1-html-css/buttons.html
+++ b/week-1-html-css/buttons.html
@@ -3,12 +3,16 @@
         background-color: rgb(200, 0, 0);
         color: white;
         border: none;
-        height: 36px;
-        width: 105px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         border-radius: 2px;
         cursor: pointer;
         margin-right: 8px;
+        margin-left: 20px;
         transition: opacity 0.15s;
+        vertical-align: top;
     }
     .sub-button:hover {
         opacity: 0.75;
@@ -19,15 +23,17 @@
 
     .join-button {
         background: white;
-        border-color: rgb(41,118,211);
+        border-color: rgb(6,95,212);
         border-style: solid;
         border-width: 1px;
         color: rgb(41,118,211);
-        height: 36px;
-        width: 62px;
         border-radius: 2px;
+        padding-top: 9px;
+        padding-bottom: 9px;
+        padding-left: 16px;
+        padding-right: 16px;
         cursor: pointer;
-        transition: background-color 1s, color 1s;
+        transition: background-color 0.3s, color 0.3s;
     }
     .join-button:hover {
         background-color: rgb(41,118,211);
@@ -38,7 +44,7 @@
     }
 
     .tweet-button {
-        background: rgb(2,158,255);
+        background: rgb(29,155,240);
         color: white;
         border: none;
         height: 36px;
@@ -49,6 +55,7 @@
         cursor: pointer;
         margin-left: 8px;
         transition: box-shadow 0.15s;
+        vertical-align: top;
     }
     .tweet-button:hover {
         box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
