--- a/week-1-html-css/website.html
+++ b/week-1-html-css/website.html
@@ -1,9 +1,17 @@
-<button>
-  Hello
-</button>
-<p>
-  paragraph of text
-</p>
-<a href="http://www.youtube.com" target="_blank">
-  Link to Youtube
-</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>First Website</title>
+  </head>
+  <body>
+    <button>
+      Hello
+    </button>
+    <p>
+      paragraph of text t
+    </p>
+    <a href="http://www.youtube.com" target="_blank">
+      Link to Youtube
+    </a>
+  </body>
+</html>
