--- a/week-1-html-css/buttons.html
+++ b/week-1-html-css/buttons.html
@@ -1,66 +1,12 @@
-<style>
-    .sub-button {
-        background-color: rgb(200, 0, 0);
-        color: white;
-        border: none;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 16px;
-        padding-right: 16px;
-        border-radius: 2px;
-        cursor: pointer;
-        margin-right: 8px;
-        margin-left: 20px;
-        transition: opacity 0.15s;
-        vertical-align: top;
-    }
-    .sub-button:hover {
-        opacity: 0.75;
-    }
-    .sub-button:active {
-        opacity: 0.6;
-    }
-
-    .join-button {
-        background: white;
-        border-color: rgb(6,95,212);
-        border-style: solid;
-        border-width: 1px;
-        color: rgb(41,118,211);
-        border-radius: 2px;
-        padding-top: 9px;
-        padding-bottom: 9px;
-        padding-left: 16px;
-        padding-right: 16px;
-        cursor: pointer;
-        transition: background-color 0.3s, color 0.3s;
-    }
-    .join-button:hover {
-        background-color: rgb(41,118,211);
-        color: white;
-    }
-    .join-button:active {
-        opacity: 0.7;
-    }
-
-    .tweet-button {
-        background: rgb(29,155,240);
-        color: white;
-        border: none;
-        height: 36px;
-        width: 74px;
-        border-radius: 18px;
-        font-weight: bold;
-        font-size: 15px;
-        cursor: pointer;
-        margin-left: 8px;
-        transition: box-shadow 0.15s;
-        vertical-align: top;
-    }
-    .tweet-button:hover {
-        box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
-    }
-</style>
-<button class="sub-button">SUBSCRIBE</button>
-<button class="join-button">JOIN</button>
-<button class="tweet-button">Tweet</button>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Buttons Practice</title>
+        <link rel="stylesheet" href="styles/buttons.css">        
+    </head>
+    <body>
+        <button class="sub-button">SUBSCRIBE</button>
+        <button class="join-button">JOIN</button>
+        <button class="tweet-button">Tweet</button>
+    </body>
+</html>
