--- a/week-1-html-css/youtube.html
+++ b/week-1-html-css/youtube.html
@@ -5,14 +5,27 @@
     <style>
       .thumbnail {
         width: 300px;
+        display: block;
       }
       .search-bar {
         font-size: 20px;
       }
+      .video-title {
+        width: 300px;
+      }
     </style>
   </head>
   <body>
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
     <input class="search-bar" type="text" placeholder="Search">
+    <p class="video-title">
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+      Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
+    <p class="video-author">
+      Marques Brownlee
+    </p>
+    <p class="video-stats">
+      3.4M views &middot; 6 months ago
+    </p>
   </body>
 </html>
