--- a/week-1-html-css/youtube.html
+++ b/week-1-html-css/youtube.html
@@ -9,23 +9,44 @@
       }
       .search-bar {
         font-size: 20px;
+        display: block;
       }
       .video-title {
         width: 300px;
+      }
+      .video-preview {
+        width: 300px;
+        display: inline-block;
+        vertical-align: top;
+        margin-right: 15px;
       }
     </style>
   </head>
   <body>
     <input class="search-bar" type="text" placeholder="Search">
-    <p class="video-title">
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
-      Talking Tech and AI with Google CEO Sundar Pichai!
-    </p>
-    <p class="video-author">
-      Marques Brownlee
-    </p>
-    <p class="video-stats">
-      3.4M views &middot; 6 months ago
-    </p>
+    <div class="video-preview">
+      <p class="video-title">
+        <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          Talking Tech and AI with Google CEO Sundar Pichai!
+        </p>
+        <p class="video-author">
+          Marques Brownlee
+        </p>
+        <p class="video-stats">
+          3.4M views &middot; 6 months ago
+        </p>
+    </div>
+    <div class="video-preview">
+      <p class="video-title">
+        <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+        Try Not To Laugh Challenge #9
+        </p>
+        <p class="video-author">
+          Markiplier
+        </p>
+        <p class="video-stats">
+          19M views &middot; 4 years ago
+        </p>
+    </div>
   </body>
 </html>
