--- a/week-1-html-css/youtube.html
+++ b/week-1-html-css/youtube.html
@@ -14,8 +14,7 @@
         margin-bottom: 0;
       }
       .thumbnail {
-        width: 300px;
-        display: block;
+        width: 100%;
       }
       .search-bar {
         font-size: 20px;
@@ -28,27 +27,16 @@
         line-height: 20px;
         margin-bottom: 12px;
       }
-      .video-preview {
-        width: 300px;
-        display: inline-block;
-        vertical-align: top;
-        margin-right: 15px;
-      }
-      .channel-picture {
-        display: inline-block;
-        width: 50px;
-        vertical-align: top;
-      }
-      .video-info {
-        display: inline-block;
-        width: 200px;
+      .video-info-grid {
+        display: grid;
+        grid-template-columns: 50px 1fr;
       }
       .profile-picture {
         width: 40px;
         border-radius: 50px;
       }
       .thumbnail-row {
-        margin-bottom: 12px;
+        margin-bottom: 6px;
       }
       .video-author,.video-stats {
         font-size: 12px;
@@ -57,49 +45,137 @@
       .video-author {
         margin-bottom: 6px;
       }
+      .video-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 16px;
+        row-gap: 40px;
+      }
     </style>
   </head>
   <body>
     <input class="search-bar" type="text" placeholder="Search">
 
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
-      </div>
-      <div>
-        <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-1.jpeg"></div>
-        <div class="video-info">
-          <p class="video-title">
-            Talking Tech and AI with Google CEO Sundar Pichai!
-          </p>
-          <p class="video-author">
-            Marques Brownlee
-          </p>
-          <p class="video-stats">
-            3.4M views &middot; 6 months ago
-          </p>
+    <div class="video-grid">
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-1.jpeg"></div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">
+              Marques Brownlee
+            </p>
+            <p class="video-stats">
+              3.4M views &middot; 6 months ago
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
-      </div>
-      <div>
-        <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-2.jpeg"></div>
-        <div class="video-info">
-          <p class="video-title">
-            Try Not To Laugh Challenge #9
-          </p>
-          <p class="video-author">
-            Markiplier
-          </p>
-          <p class="video-stats">
-            19M views &middot; 4 years ago
-          </p>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-2.jpeg"></div>
+          <div class="video-info">
+            <p class="video-title">
+              Try Not To Laugh Challenge #9
+            </p>
+            <p class="video-author">
+              Markiplier
+            </p>
+            <p class="video-stats">
+              19M views &middot; 4 years ago
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-3.jpeg"></div>
+          <div class="video-info">
+            <p class="video-title">
+              Crazy Tik Toks Taken Moments Before DISASTER
+            </p>
+            <p class="video-author">
+              SSSniperWolf
+            </p>
+            <p class="video-stats">
+              12M views &middot; 1 year ago
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-4.jpeg"></div>
+          <div class="video-info">
+            <p class="video-title">
+              The Simplest Math Problem No One Can Solve - Collatz Conjecture
+            </p>
+            <p class="video-author">
+              Veritasium
+            </p>
+            <p class="video-stats">
+              18M views &middot; 4 months ago
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-5.jpeg"></div>
+          <div class="video-info">
+            <p class="video-title">
+              Kadane's Algorithm to Maximum Sum Subarray Problem
+            </p>
+            <p class="video-author">
+              CS Dojo
+            </p>
+            <p class="video-stats">
+              519K views &middot; 5 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-6.jpeg"></div>
+          <div class="video-info">
+            <p class="video-title">
+              Anything You Can Fit In The Circle I'll Pay For
+            </p>
+            <p class="video-author">
+              MrBeast
+            </p>
+            <p class="video-stats">
+              141M views &middot; 1 year ago
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>    
   </body>
 </html>
