--- a/week-1-html-css/youtube.html
+++ b/week-1-html-css/youtube.html
@@ -30,7 +30,10 @@
       <div class="right-section">
         <img class="upload-icon" src="icons/upload.svg">
         <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
-        <img class="notifications-icon" src="icons/notifications.svg">
+        <div class="notifications-icon-container">
+          <img class="notifications-icon" src="icons/notifications.svg">
+          <div class="notifications-count">3</div>
+        </div>
         <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
       </div>
     </div>
@@ -43,6 +46,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <div class="video-time">14:20</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-1.jpeg"></div>
@@ -63,6 +67,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <div class="video-time">8:22</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-2.jpeg"></div>
@@ -83,6 +88,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+          <div class="video-time">9:13</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-3.jpeg"></div>
@@ -103,6 +109,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+          <div class="video-time">22:09</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-4.jpeg"></div>
@@ -123,6 +130,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+          <div class="video-time">11:17</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-5.jpeg"></div>
@@ -143,6 +151,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+          <div class="video-time">19:59</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture"><img class="profile-picture" src="channel-pictures/channel-6.jpeg"></div>
